typos, code formatting and IDE suggestions